# new_admin_panel_sprint_3

./: .env-dev  .gitignore  docker-compose.yml  main.py  pyproject.toml
etl/: config.py  elasticsearch.py  es_schema.py  postgres.py  utils.py
